--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
       {
-        "src": "/(.*)",
+         "src": "/static/(.*)", "dest": "/static/$1" ,
         "dest": "project/wsgi.py"
       }
     ]
