--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
-    "builds": [
-      {
-        "src": "project/wsgi.py",
-        "use": "@vercel/python",
-        "config":{"maxLambdaSize":"15mb","runtime":"python3.10"}
-      }
-    ],
-    "routes": [
-      {
-         "src": "/static/(.*)", "dest": "/static/$1" ,
-        "dest": "project/wsgi.py"
-      }
-    ]
-  }
+  "version": 2,
+  "builds": [
+    { "src": "project/manage.py", "use": "@vercel/python" }
+  ],
+  "routes": [
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/(.*)", "dest": "project/manage.py" }
+  ]
+}
