--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,19 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "project/manage.py", "use": "@vercel/python" }
+    {
+      "src": "project/wsgi.py",
+      "use": "@vercel/python",
+      "config":{"maxLambdaSize":"15mb","runtime":"python3.10"}
+    }
   ],
   "routes": [
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/(.*)", "dest": "project/manage.py" }
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "project/wsgi.py"
+    }
   ]
 }
