--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
-  "builds": [
-    {
-      "src": "project/wsgi.py",
-      "use": "@vercel/python",
-      "config":{"maxLambdaSize":"15mb","runtime":"python3.10"}
-    }
-  ],
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
+    "builds": [{
+        "src": "social/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
     },
+    {
+        "src": "build_files.sh",
+        "use": "@vercel/static",
+        "config": { "distDir": "static" }
+    }],
+  "routes": [
     {
       "src": "/(.*)",
       "dest": "project/wsgi.py"
