--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
-    "builds": [{
-        "src": "social/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
-    },
+  "builds": [
     {
-        "src": "build_files.sh",
-        "use": "@vercel/static",
-        "config": { "distDir": "static" }
-    }],
+      "src": "project/wsgi.py",
+      "use": "@vercel/python",
+      "config":{"maxLambdaSize":"15mb","runtime":"python3.10"}
+    }
+  ],
   "routes": [
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
     {
       "src": "/(.*)",
       "dest": "project/wsgi.py"
